--- a/app/page.module.sass
+++ b/app/page.module.sass
@@ -5,9 +5,10 @@
 
   direction: rtl
 
-  background: rgba(0, 0, 0, 0.25) !important
-  backdrop-filter: blur(5px) !important
-  -webkit-backdrop-filter: blur(5px) !important
+  // background: rgba( 30, 30, 30, 0.25 ) !important
+  // // background: rgba(0, 0, 0, 0.25) !important
+  // backdrop-filter: blur(10px) !important
+  // -webkit-backdrop-filter: blur(10px) !important
 
   position: relative !important
   border: none !important
