Improve styling and add sticky header functionality
- Added styles for a sticky header in globals.sass
- Modified the main content container in page.tsx to accommodate the sticky header
- Updated header styles in header.module.sass and header.tsx to support the sticky behavior

--- a/app/globals.sass
+++ b/app/globals.sass
@@ -30,3 +30,15 @@ a
     color-scheme: dark
 .dir-rtl
   direction: rtl
+
+.header-sticky
+    position: fixed
+    top: 0
+    width: auto
+    z-index: 2
+    margin-top: 10px
+    border-radius: 10rem !important
+    transition: all 250ms ease
+    height: 7.5svh !important
+.header-sticky + #main
+  margin-top: 10svh
