--- a/app/globals.sass
+++ b/app/globals.sass
@@ -37,8 +37,9 @@ a
     width: auto
     z-index: 2
     margin-top: 10px
-    border-radius: 10rem !important
+    border-radius: 1rem !important
     transition: all 250ms ease
     height: 7.5svh !important
+    padding-block: 0 !important
 .header-sticky + #main
   margin-top: 10svh
