--- a/app/page.module.sass
+++ b/app/page.module.sass
@@ -66,3 +66,12 @@
   font-size: 2rem !important
   font-weight: bold
   text-align: center
+
+.alert
+  background: rgba( 25, 18, 7, 0.5 ) !important
+  backdrop-filter: blur( 5px ) !important
+  -webkit-backdrop-filter: blur( 5px ) !important
+  div
+    &:first-of-type
+      margin-right: 0 !important
+      margin-left: 12px !important
