Update header module styles to include styles for the login button and toggle menu.
In header.module.sass:
- Added styles for .toggleMenu to handle the appearance of the toggle menu items.
- Defined styles for .selected to highlight the selected toggle menu item.

In header.tsx:
- Added a login button to the header section using the Button component from MUI.
- Adjusted the alignment and styling of the social media icons section and toggle menu.

--- a/components/header.module.sass
+++ b/components/header.module.sass
@@ -15,3 +15,13 @@
       border: none !important
       border-radius: 16px !important
       padding: 8px 16px !important
+
+.toggleMenu
+  >*
+    font-size: 18px
+    transition: all 250ms ease
+    &:hover
+      text-shadow: 0 0 2.5px #48bdcf, 0 0 7.5px #48bdcf, 0 0 20px #48bdcf, 0 0 40px #48bdcf
+.selected
+  transition: all 250ms ease
+  text-shadow: 0 0 5px #48bdcf, 0 0 15px #48bdcf, 0 0 20px #48bdcf, 0 0 40px #48bdcf
