--- a/app/page.module.sass
+++ b/app/page.module.sass
@@ -1,14 +1,9 @@
 .card
-  width: 350px !important
+  max-width: 350px !important
   min-width: 300px !important
   height: 500px
 
   direction: rtl
-
-  // background: rgba( 30, 30, 30, 0.25 ) !important
-  // // background: rgba(0, 0, 0, 0.25) !important
-  // backdrop-filter: blur(10px) !important
-  // -webkit-backdrop-filter: blur(10px) !important
 
   position: relative !important
   border: none !important
