Update header-sticky margin
This commit modifies the margin-top property of the main element that follows the .header-sticky class in the globals.sass file. It adjusts the margin-top value to 10svh to ensure proper spacing between the sticky header and the main content.

--- a/app/globals.sass
+++ b/app/globals.sass
@@ -41,5 +41,5 @@ a
   transition: all 250ms ease
   height: 7.5svh !important
   padding-block: 0 !important
-.header-sticky + #main
+.header-sticky + main
   margin-top: 10svh
