--- a/app/globals.sass
+++ b/app/globals.sass
@@ -12,6 +12,9 @@ body
   max-width: 100vw
   overflow-x: hidden
 
+body
+  padding: 0 !important
+
 .main-background
   background-color: #000000 !important
   background-image: repeating-radial-gradient( circle at 0 0, transparent 0, #000000 30px ), repeating-linear-gradient( #48bdcf00, #48bdcf2b ) !important
