Style: Update header link hover effect
This commit updates the hover effect for header links in the header module sass file. Instead of
applying text-shadow, it now changes the color to #48bdcf for better visibility and aesthetics.

--- a/components/header.module.sass
+++ b/components/header.module.sass
@@ -21,7 +21,8 @@
     font-size: 18px
     transition: all 250ms ease
     &:hover
-      text-shadow: 0 0 2.5px #48bdcf, 0 0 7.5px #48bdcf, 0 0 20px #48bdcf, 0 0 40px #48bdcf
+      color: #48bdcf
 .selected
   transition: all 250ms ease
-  text-shadow: 0 0 5px #48bdcf, 0 0 15px #48bdcf, 0 0 20px #48bdcf, 0 0 40px #48bdcf
+  color: #48bdcf
+  font-weight: bold
