--- a/components/authDialog.module.sass
+++ b/components/authDialog.module.sass
@@ -3,3 +3,6 @@
 .textFieldLabel
     left: inherit !important
     transform-origin: right !important
+.otpInput
+    >*
+        border-radius: 0.75rem !important
