Improve styling and layout in AuthDialog component
This commit refines the styling in the AuthDialog component by adjusting the border-radius of the otpInput elements in the associated Sass module. Additionally, it enhances the appearance of the Snackbar component by modifying the margin and padding of the Alert components within it. These changes improve the overall aesthetics and user experience of the AuthDialog.

--- a/components/authDialog.module.sass
+++ b/components/authDialog.module.sass
@@ -6,3 +6,9 @@
 .otpInput
     >*
         border-radius: 0.75rem !important
+.snackbarAlert
+    >*
+        &:first-child
+            margin-inline: 0 16px !important
+        &:last-child
+            padding: 4px 16px 0 0 !important
